tests/ui/invalid/invalid-no-sanitize.rs
#[no_sanitize(brontosaurus)] //~ ERROR invalid argument
fn main() {
}
